--- a/src/views/homepage.html
+++ b/src/views/homepage.html
@@ -708,7 +708,7 @@
 								<button class="schedule-button schedule-button-next">&gt;</button>
 							</div>
 						</div>
-						<div class="CTR3">
+						<!-- <div class="CTR3">
 							<nav class="small">
 								<ul class="small1">
 									<li class="small_iteam">
@@ -803,7 +803,7 @@
 									</li>
 								</ul>
 							</nav>
-						</div>
+						</div> -->
 						
 					</div>
 				</div>
@@ -919,32 +919,18 @@
 					<div class="main-video">
 						<video id="main-video-player" controls autoplay>
 							<source
-								src="saveinsta.cc_480p-game-of-thrones-extended-opening-castles-from-seasons-1-2.mp4"
+								src=""
 								type="video/mp4"
 							/>
 						</video>
 						<div id="main-video-title" class="video-title">
-							Người hâm mộ khắp nơi mừng chiến thắng của Việt Nam
+							
 						</div>
 					</div>
 			
 					<div class="sidebar">
-						<div class="video-item" onclick="loadVideo('saveinsta.cc_480p-game-of-thrones-extended-opening-castles-from-seasons-1-2.mp4', 'Người vượt đèn đỏ: Phạt thế này gần bằng chiếc xe rồi')">
-							<video>
-								<source
-									src="saveinsta.cc_480p-game-of-thrones-extended-opening-castles-from-seasons-1-2.mp4"
-									type="video/mp4"
-								/>
-							</video>
-							<div class="info">
-								<div class="title">
-									Người vượt đèn đỏ: 'Phạt thế này gần bằng chiếc xe rồi'
-								</div>
-								<div class="meta">Luật giao thông</div>
-								<div class="time">02:20</div>
-							</div>
-						</div>
-						<div class="video-item" onclick="loadVideo('saveinsta.cc_480p-game-of-thrones-extended-opening-castles-from-seasons-1-2.mp4', 'Người bay phần lực trình diễn ở TP HCM')">
+						
+						<!-- <div class="video-item" onclick="loadVideo('saveinsta.cc_480p-game-of-thrones-extended-opening-castles-from-seasons-1-2.mp4', 'Người bay phần lực trình diễn ở TP HCM')">
 							<video>
 								<source
 									src="saveinsta.cc_480p-game-of-thrones-extended-opening-castles-from-seasons-1-2.mp4"
@@ -1022,7 +1008,7 @@
 								<div class="meta">Nhịp sống</div>
 								<div class="time">02:14</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</div>
 				<div class="letter">
@@ -1100,13 +1086,13 @@
 						<div class="main_future">
 							<div class="future">
 								<div class="future_img">
-									<a
+									<!-- <a
 										href="https://vnexpress.net/no-luc-di-doi-toa-nha-11-000-tan-cach-day-gan-100-nam-vnepre-4834968.html"
 										><img
 											src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNEBell-1735896417-3948-1735896466.jpg?w=500&h=300&q=100&dpr=1&fit=crop&s=fAMq6PRF8BgOOwDx4ozTBg"
 											style="width: 455px; height: 273px"
 										/>
-									</a>
+									</a> -->
 								</div>
 								<div class="future_pr">
 									<h1>
@@ -1221,161 +1207,8 @@
 							</div>
 						</div>
 					</div>
-					<div class="khoahoc">
-						<div class="khoahoc_congnghe">
-							<h1>Khoa học-Công nghệ</h1>
-						</div>
-						<nav class="khoahoc_tittle">
-							<ul class="khoahoc_tittle_1">
-								<li class="khoahoc_title_nav">
-									<a href="https://vnexpress.net/khoa-hoc"><b>Khoa học</b></a>
-								</li>
-								<li class="khoahoc_title_nav">
-									<a href="https://vnexpress.net/khoa-hoc">Việt Nam</a>
-								</li>
-								<li class="khoahoc_title_nav">
-									<a href="https://vnexpress.net/khoa-hoc">Nhân vật</a>
-								</li>
-								<li class="khoahoc_title_nav">
-									<a href="https://vnexpress.net/khoa-hoc">Cửa sổ tri thức</a>
-								</li>
-								<li class="khoahoc_title_nav">
-									<a href="https://vnexpress.net/khoa-hoc">Thế giới tự nhiên</a>
-								</li>
-								<li class="khoahoc_title_nav">
-									<a href="https://vnexpress.net/khoa-hoc">Vũ trụ</a>
-								</li>
-								<li class="khoahoc_title_nav">
-									<a href="https://vnexpress.net/khoa-hoc">Chỉ số PII</a>
-								</li>
-							</ul>
-						</nav>
-						<div class="main_future">
-							<div class="future">
-								<div class="future_img">
-									<a
-										href="https://vnexpress.net/no-luc-di-doi-toa-nha-11-000-tan-cach-day-gan-100-nam-vnepre-4834968.html"
-										><img
-											src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNEBell-1735896417-3948-1735896466.jpg?w=500&h=300&q=100&dpr=1&fit=crop&s=fAMq6PRF8BgOOwDx4ozTBg"
-											style="width: 455px; height: 273px"
-										/>
-									</a>
-								</div>
-								<div class="future_pr">
-									<h1>
-										<a
-											href="https://vnexpress.net/no-luc-di-doi-toa-nha-11-000-tan-cach-day-gan-100-nam-vnepre-4834968.html"
-											>Nỗ lực di dời tòa nhà 11.000 tấn cách đây gần 100
-											năm</a
-										>
-									</h1>
-									<p>
-										<a
-											href="https://vnexpress.net/no-luc-di-doi-toa-nha-11-000-tan-cach-day-gan-100-nam-vnepre-4834968.html"
-											>Quá trình chuyển chỗ trụ sở của công ty điện thoại
-											Indiana Bell ở Indianapolis là một trong những dự án thú
-											vị nhất trong lịch sử di dời công trình.</a
-										>
-									</p>
-								</div>
-							</div>
-							
-							<div class="main_cavoi">
-								<div class="cavoi">
-									<div class="cavoi_img">
-										<a
-											href="https://vnexpress.net/ca-voi-sat-thu-me-mang-xac-con-non-thu-hai-4834975.html"
-											><img
-												src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNEPlane-1735878888-6879-1735878948.jpg?w=380&h=228&q=100&dpr=1&fit=crop&s=XgpNkcX3CS68bh0ckyzP9g"
-										/></a>
-									</div>
-									<div class="cavoi_pr">
-										<h1>
-											<a
-												href="https://vnexpress.net/ca-voi-sat-thu-me-mang-xac-con-non-thu-hai-4834975.html"
-												>Cá voi sát thủ mẹ mang xác con<br />
-												non thứ hai</a
-											>
-										</h1>
-									</div>
-								</div>
-								<div class="starlink">
-									<div class="starlink_img">
-										<a
-											href="https://vnexpress.net/ca-voi-sat-thu-me-mang-xac-con-non-thu-hai-4834975.html"
-											><img
-												src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNEPlane-1735878888-6879-1735878948.jpg?w=380&h=228&q=100&dpr=1&fit=crop&s=XgpNkcX3CS68bh0ckyzP9g"
-										/></a>
-									</div>
-									<div class="starlink_pr">
-										<h1>
-											<a
-												href="https://vnexpress.net/ca-voi-sat-thu-me-mang-xac-con-non-thu-hai-4834975.html"
-												>Cá voi sát thủ mẹ mang xác con<br />
-												non thứ hai</a
-											>
-										</h1>
-									</div>
-								</div>
-							</div>
-							<div class="box_to_4">
-								<div class="laser">
-									<h1>
-										<a
-											href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-											>Công ty Trung Quốc vượt Starlink trong truyền dữ liệu
-										</a>
-									</h1>
-									<a
-										href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-										><img
-											src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNESat-1735876358-6619-1735876393.jpg?w=120&h=72&q=100&dpr=1&fit=crop&s=LXcf45LbaNgU8r4Apr0h5w"
-									/></a>
-								</div>
-								<div class="laser">
-									<h1>
-										<a
-											href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-											>Công ty Trung Quốc vượt Starlink trong truyền dữ liệu
-										</a>
-									</h1>
-									<a
-										href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-										><img
-											src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNESat-1735876358-6619-1735876393.jpg?w=120&h=72&q=100&dpr=1&fit=crop&s=LXcf45LbaNgU8r4Apr0h5w"
-									/></a>
-								</div>
-								<div class="laser">
-									<h1>
-										<a
-											href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-											>Công ty Trung Quốc vượt Starlink trong truyền dữ liệu
-										</a>
-									</h1>
-									<a
-										href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-										><img
-											src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNESat-1735876358-6619-1735876393.jpg?w=120&h=72&q=100&dpr=1&fit=crop&s=LXcf45LbaNgU8r4Apr0h5w"
-									/></a>
-								</div>
-								<div class="laser">
-									<h1>
-										<a
-											href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-											>Công ty Trung Quốc vượt Starlink trong truyền dữ liệu
-										</a>
-									</h1>
-									<a
-										href="https://vnexpress.net/cong-ty-trung-quoc-vuot-starlink-trong-truyen-du-lieu-bang-laser-4834972.html"
-										><img
-											src="https://i1-vnexpress.vnecdn.net/2025/01/03/VNESat-1735876358-6619-1735876393.jpg?w=120&h=72&q=100&dpr=1&fit=crop&s=LXcf45LbaNgU8r4Apr0h5w"
-									/></a>
-								</div>
-							</div>
-						</div>
-					</div>
+					
 				</div>
-
 				<div class="box_3">
 					<div class="thoisu">
 						<nav class="nav">
@@ -1437,7 +1270,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="thoisu">
+					<div class="thegioi">
 						<nav class="nav">
 							<ul class="nav_1">
 								<li class="nav_1_item">
@@ -1451,15 +1284,15 @@
 								</li>
 							</ul>
 						</nav>
-						<div class="thoisu_main">
-							<div class="thoisu_img_pr">
-								<div class="thoisu_img">
+						<div class="thegioi_main">
+							<div class="thegioi_img_pr">
+								<div class="thegioi_img">
 									<a href="https://vnexpress.net/thoi-su"
 										><img
 											src="https://i1-vnexpress.vnecdn.net/2025/01/03/no-tau-2-jpeg-1735893824-17358-9551-7060-1735893915.jpg?w=380&h=228&q=100&dpr=2&fit=crop&s=fCPTbCiPPVWZVuPWkPcoNQ"
 									/></a>
 								</div>
-								<div class="thoisu_pr">
+								<div class="thegioi_pr">
 									<h1>
 										<a
 											href="https://vnexpress.net/no-tau-cho-dau-3-nguoi-bi-thuong-4835243.html"
@@ -1476,7 +1309,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="thoisu_article">
+							<div class="thegioi_article">
 								<h1>
 									<a
 										href="https://vnexpress.net/du-an-xi-mang-5-000-ty-dong-bo-hoang-gan-hai-thap-ky-4834664.html"
@@ -1494,7 +1327,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="thoisu">
+					<div class="phapluat">
 						<nav class="nav">
 							<ul class="nav_1">
 								<li class="nav_1_item">
@@ -1508,15 +1341,15 @@
 								</li>
 							</ul>
 						</nav>
-						<div class="thoisu_main">
-							<div class="thoisu_img_pr">
-								<div class="thoisu_img">
+						<div class="phapluat_main">
+							<div class="phapluat_img_pr">
+								<div class="phapluat_img">
 									<a href="https://vnexpress.net/thoi-su"
 										><img
 											src="https://i1-vnexpress.vnecdn.net/2025/01/03/no-tau-2-jpeg-1735893824-17358-9551-7060-1735893915.jpg?w=380&h=228&q=100&dpr=2&fit=crop&s=fCPTbCiPPVWZVuPWkPcoNQ"
 									/></a>
 								</div>
-								<div class="thoisu_pr">
+								<div class="phapluat_pr">
 									<h1>
 										<a
 											href="https://vnexpress.net/no-tau-cho-dau-3-nguoi-bi-thuong-4835243.html"
@@ -1533,7 +1366,7 @@
 									</p>
 								</div>
 							</div>
-							<div class="thoisu_article">
+							<div class="phapluat_article">
 								<h1>
 									<a
 										href="https://vnexpress.net/du-an-xi-mang-5-000-ty-dong-bo-hoang-gan-hai-thap-ky-4834664.html"
