--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,118 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giải Trí</title>
-</head>
-<style>
-.giaitri {
-display: flex;
-gap: 10px;
-padding-left: 20px;
-justify-content: space-around;
-}
-.giaitri h1 a{
-		font-size: 14px;
-		line-height: 1.2;
-		display: block;
-}
-.giaitri_pr {
-	border-right: 1px solid #e5e5e5;
-	width:200px;
-	padding: 0 10px 0 0;
-}
-.giaitri_right {
-	width:200px;
-}
+<div class="ykien_left">
+    <section class="ykien_nav">
+        <h1><a href="https://vnexpress.net/y-kien">Ý kiến</a></h1>
+    </section>
+    <div class="ykien_box">
+        <h1>
+            <a
+                href="https://vnexpress.net/tuoi-40-roi-ghe-bien-che-cong-chuc-viec-nhe-luong-deu-4835534.html"
+                >Tuổi 40 rời ghế biên chế công chức 'việc nhẹ, lương
+                đều'</a
+            >
+        </h1>
 
-.giaitri_bottom {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	margin-left: 20px;
-}
-.giaitri_ct {
-	width:180px;
-	gap:10px;
-}
-.giaitri_ct a b {
-	font-size:14px;
-}
-
-.giaitri_ct a:hover {
-	color: blue;
-}
-
-</style>
-<body>
-    <div class="ct1">
-        <div class="giaitri">
-            <div class="giaitri_img">
-                
-            </div>
-            <div class="giaitri_pr">
-                <h1>
-                    <a
-                        href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
-                        >Đội tuyển Việt Nam thắng đậm 5-0</a
-                    >
-                </h1>
-                <p>
-                    <a
-                        href="https://vnexpress.net/doi-tuyen-viet-nam-thang-dam-5-0-4833705.html"
-                        >Đội tuyển Việt Nam có chiến thắng áp đảo trước đối thủ...</a
-                    >
-                </p>
-            </div>
-            <div class="giaitri_right">
-                <h1>
-                    <a
-                        href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
-                        >Messi ghi bàn đẹp mắt</a
-                    >
-                </h1>
-                <p>
-                    <a
-                        href="https://vnexpress.net/messi-ghi-ban-dep-mat-4833705.html"
-                        >Lionel Messi tiếp tục tỏa sáng với một siêu phẩm...</a
-                    >
-                </p>
-            </div>
-        </div>
+        <p>
+            <a
+                href="https://vnexpress.net/toi-da-say-nang-dong-nghiep-nu-4835502.html"
+                >Khoảng một năm gần đây, tôi thường đi ăn, đi cafe
+                cùng đồng nghiệp nữ và thấy có cảm tình với cô
+                ấy.</a
+            >
+        </p>
     </div>
-    <div class="border4"></div>
-    <nav class="giaitri_nav">
-        <ul class="giaitri_bottom">
-            <li class="giaitri_ct">
-                <a
-                    href="https://vnexpress.net/ronaldo-lap-hat-trick-4833665.html"
-                    ><b
-                        >Ronaldo lập hat-trick trong<br />
-                        trận đấu quan trọng</b
-                    ></a
-                >
-            </li>
-            <li class="giaitri_ct">
-                <a
-                    href="https://vnexpress.net/viet-nam-gianh-hcv-4833665.html"
-                    ><b
-                        >Việt Nam giành HCV tại<br />
-                        giải vô địch Đông Nam Á</b
-                    ></a
-                >
-            </li>
-            <li class="giaitri_ct">
-                <a
-                    href="https://vnexpress.net/mu-thua-dam-4833665.html"
-                    ><b
-                        >MU thua đậm trước<br />
-                        đối thủ yếu hơn</b
-                    ></a
-                >
-            </li>
-        </ul>
-    </nav>
-    
-</body>
-</html>
+    <div class="ykien_pr">
+        <h1>
+            <a
+                href="https://vnexpress.net/toi-da-say-nang-dong-nghiep-nu-4835502.html"
+                >Vợ chồng cãi nhau vì đồ cũ không dùng là tống về
+                quê</a
+            >
+        </h1>
+        <p>
+            <a
+                href="https://vnexpress.net/toi-da-say-nang-dong-nghiep-nu-4835502.html"
+                >Khoảng một năm gần đây, tôi thường đi ăn, đi cafe
+                cùng đồng nghiệp nữ và thấy có cảm tình với cô
+                ấy.</a
+            >
+        </p>
+    </div>
+    <div class="ykien_pr">
+        <h1>
+            <a
+                href="https://vnexpress.net/toi-da-say-nang-dong-nghiep-nu-4835502.html"
+                >Vợ chồng cãi nhau vì đồ cũ không dùng là tống về
+                quê</a
+            >
+        </h1>
+        <p>
+            <a
+                href="https://vnexpress.net/toi-da-say-nang-dong-nghiep-nu-4835502.html"
+                >Khoảng một năm gần đây, tôi thường đi ăn, đi cafe
+                cùng đồng nghiệp nữ và thấy có cảm tình với cô
+                ấy.</a
+            >
+        </p>
+    </div>
+    <div class="ykien_pr">
+        <h1>
+            <a
+                href="https://vnexpress.net/toi-da-say-nang-dong-nghiep-nu-4835502.html"
+                >Vợ chồng cãi nhau vì đồ cũ không dùng là tống về
+                quê</a
+            >
+        </h1>
+        <p>
+            <a
+                href="https://vnexpress.net/toi-da-say-nang-dong-nghiep-nu-4835502.html"
+                >Khoảng một năm gần đây, tôi thường đi ăn, đi cafe
+                cùng đồng nghiệp nữ và thấy có cảm tình với cô
+                ấy.</a
+            >
+        </p>
+    </div>
+    <div class="border_ykien"></div>
+</div>
